# appliczioni-modbili

SportMates/: .gitignore  pubspec.yaml
SportMates/android/: build.gradle
SportMates/android/app/: build.gradle
SportMates/lib/: main.dart  utils.dart
SportMates/lib/pages/: home.dart
SportMates/linux/: CMakeLists.txt
SportMates/macos/Runner.xcodeproj/: project.pbxproj
SportMates/web/: index.html  manifest.json
app/flutter_application_1/: README.md  pubspec.yaml
app/flutter_application_1/android/: build.gradle
app/flutter_application_1/lib/: Search.dart  activity_card.dart  auth_provider.dart  config.dart  home.dart  login_signup.dart  main.dart  new_activity.dart  place_picker.dart  root.dart  settings.dart  splash_screen.dart  theme.dart  utils.dart
app/flutter_application_1/linux/: my_application.cc
app/flutter_application_1/windows/: CMakeLists.txt
backend/: .gitignore  .initialize.py.swp  auth.py  crud.py  database.py  initialize.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  sportactivities.db  vercel.json
relazione/: .gitignore  main.tex  presentation.html  presentation.md  shell.nix
sport_mates/: README.md  pubspec.yaml
sport_mates/.direnv/: flake-profile-1-link  flake-profile-2-link
sport_mates/android/: build.gradle
sport_mates/android/app/: build.gradle
sport_mates/ios/Runner.xcodeproj/: project.pbxproj
sport_mates/lib/: main.dart  utils.dart
sport_mates/linux/: CMakeLists.txt  my_application.cc
sport_mates/web/: index.html  manifest.json
sport_mates/windows/: CMakeLists.txt
(+97 files in other folders)
